--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -13,8 +13,9 @@
 h1{
     position: absolute;
     top: 70px;
-    left: 50px;
+    left: 18%;
     font-size: 70px;
     font-family: serif;
     color: crimson;
 }
+
